# wield-declarative

./: .gitignore  README.md  setup.cfg
docs/: API.rst  index.rst
src/wavestate/declarative/: __init__.py  _version.py  metaclass.py  overridable_object.py  run.py
src/wavestate/declarative/argparse/: __init__.py  annotations.py  oo_argparse.py
src/wavestate/declarative/callbacks/: __init__.py  callbacks.py  relay.py  state_booleans.py  validators.py
src/wavestate/declarative/properties/: __init__.py  bases.py  memoized.py  memoized_adv.py  memoized_adv_group.py  utilities.py
src/wavestate/declarative/utilities/: __init__.py  representations.py  super_base.py  unique.py
src/wield/declarative/: __init__.py  _version.py  metaclass.py  overridable_object.py  run.py
src/wield/declarative/argparse/: __init__.py  annotations.py  oo_argparse.py
src/wield/declarative/callbacks/: __init__.py  callbacks.py  relay.py  state_booleans.py  validators.py
src/wield/declarative/properties/: __init__.py  bases.py  memoized.py  memoized_adv.py  memoized_adv_group.py  utilities.py
src/wield/declarative/utilities/: __init__.py  representations.py  super_base.py  unique.py
test/: test_properties.py
test/argparse/: argparse_dev.py  test_args.py
test/callbacks/: callbacks.py
